# rune

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  release-plz.toml
.github/workflows/: release-assets.yml  release-plz.yml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  config.rs  deploy.rs  lib.rs  main.rs
crates/cli/src/tui/: mod.rs  splash.rs
crates/cli/src/tui/dashboard/: components.rs  mod.rs  overlays.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: base64_serde.rs  config.rs  deployment.rs  error.rs  functions.rs  headers.rs  lib.rs  request.rs  response.rs  store.rs
crates/registry/: Cargo.toml
crates/registry/migrations/: 001_init.sql
crates/registry/src/: lib.rs  memory.rs  sqlite.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: executor.rs  lib.rs  runtime.rs
crates/runtime/tests/fixtures/: hello.wasm
docs/: abi.md
examples/hello/: Cargo.toml
examples/hello/src/: lib.rs
src/: bootstrap.rs  error.rs  handler.rs  main.rs
src-leptos/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js  ui_config.toml
src-leptos/src/: app.rs  main.rs
src-leptos/src/components/: mod.rs  search_context.rs  shell.rs
src-leptos/src/components/hooks/: mod.rs  use_pagination.rs  use_theme_mode.rs  use_virtual_scroll.rs
src-leptos/src/components/ui/: action_bar.rs  charts.rs  context_menu.rs  date_picker_dual_state.rs  date_picker_state.rs  dialog.rs  drag_and_drop.rs  drawer.rs  header.rs  input_otp.rs  input_phone.rs  mod.rs  multi_select.rs  scroll_lock.rs  sonner.rs  toast_context.rs
src-leptos/src/pages/: dashboard.rs  login.rs  mod.rs  overview.rs
src-leptos/src/services/: api.rs  auth.rs  mod.rs  types.rs
src-leptos/src/utils/: date.rs  mod.rs  query.rs
src-leptos/style/: output.css  tailwind.css
src/api/: auth.rs  functions.rs  keys.rs  mod.rs  session.rs
src/tls/: acme.rs  cert.rs  mod.rs
