[package]
name = "rune-server"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"
description = "Sandboxed WASM function runtime server for the Rune platform."
homepage = "https://github.com/Akshay2642005/rune"
repository = "https://github.com/Akshay2642005/rune"
readme = "README.md"
keywords = ["wasm", "runtime", "server", "edge"]
categories = ["web-programming", "wasm"]
default-run = "rune-server"

[workspace]
members = ["crates/core", "crates/registry", "crates/cli", "crates/runtime"]
exclude = ["examples/hello"]
resolver = "3"


[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
bytes = "1"
http-body-util = "0.1"
anyhow = "1"
serde_json = "1.0"

rune-core = { workspace = true }
rune-registry = { workspace = true } 
rune-runtime = { workspace = true } 



[workspace.dependencies]
wasmtime = "=44.0.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
parking_lot = "0.12"
base64 = "0.22"

rune-core = { version = "0.1.0-alpha", path = "crates/core" }
rune-registry = { version = "0.1.0-alpha", path = "crates/registry" }
rune-runtime = { version = "0.1.0-alpha", path = "crates/runtime" }
