[package]
name = "rune-server"
version = "0.1.1-alpha"
edition = "2021"
license = "MIT"
description = "Sandboxed WASM function runtime server for the Rune platform."
homepage = "https://github.com/Akshay2642005/rune"
repository = "https://github.com/Akshay2642005/rune"
readme = "README.md"
keywords = ["wasm", "runtime", "server", "edge"]
categories = ["web-programming", "wasm"]
default-run = "rune-server"

[workspace]
members = ["crates/core", "crates/registry", "crates/cli", "crates/runtime"]
exclude = ["examples/hello", "examples/wasm_web"]
resolver = "3"


[dependencies]
axum = "0.8"
tokio = { workspace = true }
bytes = "1"
http-body-util = "0.1"
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = {workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

rune-core = { workspace = true }
rune-registry = { workspace = true } 
rune-runtime = { workspace = true } 



[workspace.dependencies]
wasmtime = "=44.0.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
parking_lot = "0.12"
base64 = "0.22"
tempfile = "3.15"
wat = "1.240"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1.3", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" , features = ["multipart", "json"] }
toml = "0.8"
dirs = "5"

rune-core = { version = "0.1.1-alpha", path = "crates/core" }
rune-registry = { version = "0.1.1-alpha", path = "crates/registry" }
rune-runtime = { version = "0.1.1-alpha", path = "crates/runtime" }
runectl = { version = "0.1.1-alpha", path = "crates/cli" }


[dev-dependencies]
runectl = { workspace = true }
tempfile = { workspace = true }
