[package]
name = "rune-web"
version = "0.1.0"
edition = "2021"

[package.metadata.leptos]
tailwind-input-file = "style/tailwind.css"

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
tw_merge.workspace = true
icons.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
leptos_ui.workspace = true
