[package]
name = "rune-web"
version = "0.1.0"
edition = "2024"

[package.metadata.leptos]
tailwind-input-file = "style/tailwind.css"

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { workspace = true }
tw_merge.workspace = true
icons.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
leptos_ui.workspace = true
js-sys = { workspace = true }
time = { workspace = true }
heck = "0.5.0"
strum = "0.28.0"
web-sys = { version = "0.3.98", features = [
    "Storage",
    "Navigator",
    "Clipboard",
    "MediaQueryList",
    "NodeList",
    "HtmlElement",
    "CssStyleDeclaration",
    "Element",
    "Document",
    "History",
    "Location",
    "DomRect",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
validator = "0.20.0"
