[package]
name = "rune-core"
version = "0.1.1-alpha"
edition = "2024"
license = "MIT"
description = "Shared core types for the Rune platform."
homepage = "https://github.com/Akshay2642005/rune"
repository = "https://github.com/Akshay2642005/rune"
readme = "../../README.md"
keywords = ["wasm", "runtime", "platform"]
categories = ["wasm"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
