[package]
name = "rune-registry"
version = "0.1.0-alpha"
edition = "2024"
license = "MIT"
description = "Function registry components for the Rune platform."
homepage = "https://github.com/Akshay2642005/rune"
repository = "https://github.com/Akshay2642005/rune"
readme = "../../README.md"
keywords = ["wasm", "registry", "runtime"]
categories = ["wasm"]

[dependencies]
rune-core = { workspace = true }
