[package]
name = "rune-runtime"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "WASM execution runtime for the Rune platform."
homepage = "https://github.com/Akshay2642005/rune"
repository = "https://github.com/Akshay2642005/rune"
readme = "../../README.md"
keywords = ["wasm", "runtime", "server"]
categories = ["wasm"]

[dependencies]
wasmtime = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rune-core = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
rune-registry = { workspace = true }
tempfile = { workspace = true }
wat = { workspace = true }
